make dom tree for comments section in JS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./scripts/index-page.js" async></script>
     <link href="./styles/bio.css" rel="stylesheet" />
 </head>
 <header>
@@ -98,6 +99,9 @@
                 <img src="./assets/Images/Photo-gallery-9.jpg" alt="image 9">
             </div>
         </div>
+    </section>
+    <section class="comments">
+
     </section>
 </main>
 
