made basic structure to add on-click background for specific show element clickedgit add .

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -17,7 +17,7 @@
         <ul class="navbar-list">
             
             <li class="navbar-list__item">
-                <a class="navbar-link" href=""><h2 class="section-header">Biography</h2><hr></a>
+                <a class="navbar-link" href="../index.html"><h2 class="section-header">Biography</h2><hr></a>
                 
             </li>
             <li class="navbar-list__item">
