--- a/pages/shows.html
+++ b/pages/shows.html
@@ -33,7 +33,8 @@
                 <img src="../assets/Images/hero-shows.jpg" alt="hero image">
             </div>
             <!-- <p class="hero-content__subtitle">Beautiful Beasts Album</p>  -->
-            <h1 class="hero-content__title">Queen of Yellow x For the Stings</h1>        
+            <h1 class="hero-content__title">Queen of Yellow x For the Stings</h1>  
+            <h2 class = "hero-content__subtitle">Beautiful Beasts Album</h2>      
         </div>
         
     </section>
