--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
         <ul class="navbar-list">
             
-            <li class="navbar-list__item">
-                <a class="navbar-link" href=""><h2 class="section-header">Biography</h2><hr></a>
+            <li class="navbar-list__item" id="bio">
+                <a class="navbar-link" href=""><h2 class="section-header">Biography</h2></a>
                 
             </li>
-            <li class="navbar-list__item">
+            <li class="navbar-list__item" id="shows">
                 <a class="navbar-link" href="./pages/shows.html"><h2 class="section-header">Shows</h2></a>
             </li>            
         </ul>
