--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src=""></script>
     <script src="./scripts/index-page.js" async></script>
     <link href="./styles/bio.css" rel="stylesheet" />
 </head>
