--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src=""></script>
-    <script src="./scripts/index-page.js" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"></script>
+    <script src="./scripts/band-site-api.js"></script>
+    <script type="module" src="./scripts/index-page.js" async></script>
     <link href="./styles/bio.css" rel="stylesheet" />
 </head>
 <body>
@@ -189,4 +190,5 @@
     
     
 </body>
+
 </html>
