--- a/pages/shows.html
+++ b/pages/shows.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../scripts/build-shows-page.js" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"></script>
+    <script src="./scripts/band-site-api.js"></script>
+    <script type="module" src="../scripts/build-shows-page.js" async></script>
     <!-- <link href="../styles/bio.css" rel="stylesheet" /> -->
     <link href="../styles/shows.css" rel="stylesheet" />
 </head>
